--- a/scai/lama/examples/lecture/Makefile
+++ b/scai/lama/examples/lecture/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: task0.exe task1a.exe task1b.exe task2.exe task2a.exe task3.exe task4.exe task5.exe
+EXECUTABLE: ${EXECUTABLES_TUTORIAL}
 
 .SUFFIXES:
 
