--- a/scai/lama/examples/solver/Makefile
+++ b/scai/lama/examples/solver/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: matrix_generator.exe cg_solver.exe jacobi_solver.exe amg_solver.exe gmres_solver.exe
+EXECUTABLE: ${EXECUTABLES_SOLVER}
 
 cg_solver.exe: LamaConfig.hpp
 jacobi_solver.exe: LamaConfig.hpp
