--- a/scai/lama/examples/tutorial/Makefile
+++ b/scai/lama/examples/tutorial/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: simple.exe vector.exe solver.exe blas1.exe vector_exp.exe matrix.exe scalar.exe 
+EXECUTABLE: ${EXECUTABLES_TUTORIAL}
 
 .SUFFIXES:
 
