GenMatrices for examples/solver back again.

--- a/scai/lama/examples/solver/CMakeLists.txt
+++ b/scai/lama/examples/solver/CMakeLists.txt
@@ -31,9 +31,11 @@
 ###
 
 foreach ( executable amg_solver cg_solver gmres_solver jacobi_solver lama_info matrix_generator )
-    add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} ama )
+    add_executable( ${executable}.exe ${executable}.cpp )
+    target_link_libraries( ${executable}.exe ama )
     set ( EXAMPLE_EXECUTABLES_SOLVER "${EXAMPLE_EXECUTABLES_SOLVER} ${executable}.exe" )
 endforeach ( executable )
+
+configure_file( GenMatrices.py GenMatrices.py COPYONLY )
 
 set ( EXAMPLE_EXECUTABLES_SOLVER "${EXAMPLE_EXECUTABLES_SOLVER}" PARENT_SCOPE )
