--- a/scai/lama/examples/spy/CMakeLists.txt
+++ b/scai/lama/examples/spy/CMakeLists.txt
@@ -41,13 +41,15 @@ find_library( PNG_LIBRARY
               NAMES png
 )
 
-if ( PGN_LIBRARY AND PGN_INCLUDE_DIR )
-    add_include_directories( ${PNG_INCLUDE_DIR} )
+if ( PNG_LIBRARY AND PNG_INCLUDE_DIR )
+    include_directories( ${PNG_INCLUDE_DIR} )
     foreach ( executable amg_spy spy )
         add_executable( ${executable} ${executable}.cpp )
-        target_link_libraries( ${executable} ama $PNG_LIBRARY )
+        target_link_libraries( ${executable} ama ${PNG_LIBRARY} )
         set ( EXAMPLE_EXECUTABLES_SPY "${EXAMPLE_EXECUTABLES_SPY} ${executable}.exe" )
     endforeach ( executable )
 endif ()
+
+mark_as_advanced( PNG_LIBRARY PNG_INCLUDE_DIR )
     
 set ( EXAMPLE_EXECUTABLES_SPY "${EXAMPLE_EXECUTABLES_SPY}" PARENT_SCOPE )
