--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -51,7 +51,7 @@ target_link_libraries( module scai_common )
 # example of a library module ( no use of other LAMA stuff )
 add_library( dummy_module SHARED DummyModule.cpp )
 
-foreach ( executable ExceptionDemo CriticalRegion Barrier DemoFactory DemoFactory1 DemoPointer UseModule )
+foreach ( executable ExceptionDemo CriticalRegion Barrier DemoFactory DemoFactory1 DemoPointer UseModule TimePrecision)
     add_executable ( ${executable} ${executable}.cpp )
     target_link_libraries ( ${executable} scai_common )
     set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
