Renamed ContextArray->_HArray, LAMAArray->LArray

--- a/scai/hmemo/CMakeLists.txt
+++ b/scai/hmemo/CMakeLists.txt
@@ -116,7 +116,7 @@ scai_project (
          Context
          ContextData
          ContextDataManager
-         ContextArray
+         _HArray
          HostContext
          HostMemory
          Memory
