--- a/scai/lama/examples/CMakeLists.txt
+++ b/scai/lama/examples/CMakeLists.txt
@@ -43,5 +43,5 @@ add_subdirectory ( tutorial )
 
 ## install examples
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
-install ( DIRECTORY ./ DESTINATION share/examples/scai-lama-${SCAI_LAMA_VERSION} FILES_MATCHING REGEX "^(.*.(c|h)pp)|(Makefile)$" )
+install ( DIRECTORY ./ DESTINATION share/examples/scai-lama-${SCAI_LAMA_VERSION} FILES_MATCHING REGEX "^(.*.(cpp|hpp|mtx))|(Makefile)$" )
 install ( FILES Makefile ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION share/examples/scai-lama-${SCAI_LAMA_VERSION} )
