--- a/scai/lama/examples/lecture/Makefile
+++ b/scai/lama/examples/lecture/Makefile
@@ -4,7 +4,7 @@ INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
-EXECUTABLE: ${EXECUTABLES_TUTORIAL}
+EXECUTABLE: ${EXECUTABLES_LECTURE}
 
 .SUFFIXES:
 
