Added summaries for kregistry and blaskernel

--- a/scai/blaskernel/CMakeLists.txt
+++ b/scai/blaskernel/CMakeLists.txt
@@ -193,3 +193,7 @@ add_subdirectory( doc )
 ## add custum target distClean
 include ( DistClean )
 
+if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
+        include ( Summaries/blaskernel )
+endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
+
