Further changes to Complex

--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -104,7 +104,8 @@ scai_project (
         Printable
         ScalarType
         SCAITypes
-	Complex
+        Math
+        
         ContextType
         Settings
         Thread
@@ -114,7 +115,7 @@ scai_project (
     HEADERS
 
         bind     
-#        Complex
+        Complex
         config
         Constants
         Factory
