Changed name of result directory of the code coverage

--- a/scai/hmemo/test/ccajen.sh.in
+++ b/scai/hmemo/test/ccajen.sh.in
@@ -39,7 +39,7 @@ path_genhtml=$2
 error_count=0
 
 # Creating dir named by YEAR_MONTH_DAY-HOURMINUTE
-dirname=$(date +%y_%m_%d-%H%M)
+dirname=coverage_$(date +%y_%m_%d-%H%M)
 echo "Create coverage directory: ${dirname}"
 mkdir ${dirname}
 
