Common: some changes, update of doc and examples, added tests

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -30,6 +30,21 @@
  # @date 09.09.2015
 ###
 
+set ( CXX_SOURCES
+      CommonTest.cpp
+      SettingsTest.cpp  
+)
+
+include_directories ( ${Boost_INCLUDE_DIR} )
+
+add_executable ( CommonTest ${CXX_SOURCES} )
+
+target_link_libraries ( CommonTest 
+    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+    scai_common
+    )
+
 file ( GLOB LOCAL_HEADERS "*.hpp" )
 
 install ( FILES ${LOCAL_HEADERS} DESTINATION include/scai/common/test )
+
