Removed abs and sqrt from TypeTraits, added to Math

--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -105,7 +105,7 @@ scai_project (
         ScalarType
         SCAITypes
         Math
-        
+        Complex
         ContextType
         Settings
         Thread
@@ -115,7 +115,7 @@ scai_project (
     HEADERS
 
         bind     
-        Complex
+        #Complex
         config
         Constants
         Factory
