Added code coverage for kregistry

--- a/scai/hmemo/test/CMakeLists.txt
+++ b/scai/hmemo/test/CMakeLists.txt
@@ -57,7 +57,5 @@ if    ( USE_MIC )
 endif ( USE_MIC )
 
 if ( USE_CODE_COVERAGE )
-    ### Copy the cca.sh and ccajen.sh file in build directory ###
-    #configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/cca.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/cca.sh" @ONLY)
-    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/ccajen.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/ccajen.sh" @ONLY)
+    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
 endif ( USE_CODE_COVERAGE )
