--- a/scai/kregistry/test/CMakeLists.txt
+++ b/scai/kregistry/test/CMakeLists.txt
@@ -52,6 +52,10 @@ if ( Boost_UNIT_TEST_FRAMEWORK_FOUND )
         ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
         scai_kregistry
         )
+        
+    if ( USE_CODE_COVERAGE )
+        configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
+    endif ( USE_CODE_COVERAGE )
 
 endif ( Boost_UNIT_TEST_FRAMEWORK_FOUND )
 
