--- a/scai/hmemo/test/code_coverage.sh.in
+++ b/scai/hmemo/test/code_coverage.sh.in
@@ -1,5 +1,5 @@
 #
-#  @file cca.sh
+#  @file code_coverage.sh
 # 
 #  @license
 #  Copyright (c) 2009-2013
@@ -34,72 +34,59 @@
 
 #!/bin/bash
 
-path_lcov=$1
-path_genhtml=$2
 error_count=0
 
-# Creating dir named by YEAR_MONTH_DAY-HOURMINUTE
-dirname=coverage_$(date +%y_%m_%d-%H%M)
+# Creating dir using current unix timestamp
+dirname=coverage_$(date +%s)
 echo "Create coverage directory: ${dirname}"
 mkdir ${dirname}
 
-cd ${dirname}
 
 # Clearing up environment
-${path_lcov} --base-directory ../.. --directory ../.. --zerocounters
-
-
+cd ${dirname}
+lcov --base-directory ../.. --directory ../.. --zerocounters
 cd ..
 
-#for j in TRACE DEBUG INFO WARN ERROR OFF # TRACE DEBUG INFO WARN are causing failures
-#do
 
-export SCAI_LOG=TRACE # $j
 
-    
-for i in time time:thread
-do
-
-	export SCAI_TRACE=$i
-	echo SCAI_TRACE=$i
+export SCAI_LOG=TRACE
+export SCAI_TRACE=time
 	
-	# Running tests serial
-	echo "Running serial tests"
-	./MemoryTest >/dev/null
+# Running tests serial
+echo "Running serial tests"
+./MemoryTest >/dev/null
+if [ $? -ne 0 ]
+then
+	echo "ERROR in MemoryTest"
+	error_count=$(($error_count + $?))
+fi
+
+if [ -d cuda ];
+then
+	#Running CUDA tests
+	cd cuda
+	echo "Running cuda tests"
+	./CUDATest >/dev/null
 	if [ $? -ne 0 ]
 	then
-		echo "ERROR in lama_test"
+		echo "ERROR in CudaTest"
 		error_count=$(($error_count + $?))
 	fi
-	
-	if [ -d cuda ];
-	then
-		#Running CUDA tests
-		cd cuda
-		echo "Running cuda tests"
-		./CUDATest >/dev/null
-		if [ $? -ne 0 ]
-		then
-			echo "ERROR in lama_cuda_test"
-			error_count=$(($error_count + $?))
-		fi
-		cd ..
-	fi
-
-done
+	cd ..
+fi
 
 cd ${dirname}
 
 #Running lcov and creating data
-${path_lcov} --base-directory ../.. --directory ../.. --capture --output-file=data.info
+lcov --base-directory ../.. --directory ../.. --capture --output-file=data.info
 if [ $? -ne 0 ]
 then
 	echo "ERROR in running lcov"
 	error_count=$(($error_count + $?))
 fi
 
-#Extracting just Sourcefiles from LAMA/src/*
-${path_lcov} --extract data.info "@CMAKE_SOURCE_DIR@/*" --output-file=data.info
+#Extracting just Sourcefiles
+lcov --extract data.info "@CMAKE_SOURCE_DIR@/*" --output-file=data.info
 if [ $? -ne 0 ]
 then
 	echo "ERROR in extracting lcov data"
@@ -107,7 +94,7 @@ then
 fi
 
 # Generating html-structure
-${path_genhtml} data.info
+genhtml data.info
 if [ $? -ne 0 ]
 then
 	echo "ERROR in generating html-structure"
