Added code coverage for blaskernel

--- a/scai/blaskernel/test/CMakeLists.txt
+++ b/scai/blaskernel/test/CMakeLists.txt
@@ -54,3 +54,7 @@ target_link_libraries ( BLASKernelTest
 #if    ( USE_MIC )
 #    add_subdirectory ( mic )
 #endif ( USE_MIC )
+
+if ( USE_CODE_COVERAGE )
+    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
+endif ( USE_CODE_COVERAGE )
