Added code coverage for common

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -48,3 +48,7 @@ file ( GLOB LOCAL_HEADERS "*.hpp" )
 
 install ( FILES ${LOCAL_HEADERS} DESTINATION include/scai/common/test )
 
+if ( USE_CODE_COVERAGE )
+    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
+endif ( USE_CODE_COVERAGE )
+
