Added xmltest.sh to common

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -48,6 +48,9 @@ file ( GLOB LOCAL_HEADERS "*.hpp" )
 
 install ( FILES ${LOCAL_HEADERS} DESTINATION include/scai/common/test )
 
+### Copy the xmltest.sh file in build directory ### 
+file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} ) 
+
 if ( USE_CODE_COVERAGE )
     configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
 endif ( USE_CODE_COVERAGE )
