Added xmltest.sh to kregistry

--- a/scai/kregistry/test/CMakeLists.txt
+++ b/scai/kregistry/test/CMakeLists.txt
@@ -56,6 +56,9 @@ if ( Boost_UNIT_TEST_FRAMEWORK_FOUND )
     if ( USE_CODE_COVERAGE )
         configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
     endif ( USE_CODE_COVERAGE )
+    
+    ### Copy the xmltest.sh file in build directory ### 
+    file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} ) 
 
 endif ( Boost_UNIT_TEST_FRAMEWORK_FOUND )
 
