update FindBoost to new version from cmake 3.4.3; added cmake policy to projects

--- a/scai/kregistry/CMakeLists.txt
+++ b/scai/kregistry/CMakeLists.txt
@@ -33,6 +33,7 @@
 
 ### Set required CMake version
 cmake_minimum_required ( VERSION 2.8 )
+cmake_policy( SET CMP0054 NEW )
 
 ### Set PROJECT NAME / supported LANGUAGES
 project( scai_kregistry CXX )
