Added tests for solvers

--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -37,7 +37,7 @@ scai_project (
 
     CLASSES
 
-        Configuration
+       # Configuration
         MatrixStorageTest
         NormTest
         SparseMatrixHelper
