--- a/scai/lama/test/distributed/CMakeLists.txt
+++ b/scai/lama/test/distributed/CMakeLists.txt
@@ -73,16 +73,17 @@ scai_project (
         ${MetisDistributionTest}
 
         #TODO: REMOVE!
-        ../Configuration
+   #     ../Configuration
         ../SparseMatrixHelper
         ../CommunicatorTest
 )
     
 # individual preprocessor definition 
 
-set_property( SOURCE ../Configuration.cpp 
-              PROPERTY COMPILE_DEFINITIONS LAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../../res/testfiles" 
-            )
+#set_property( SOURCE ${CXX_SOURCES} 
+#              PROPERTY COMPILE_DEFINITIONS LAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../../res/testfiles" 
+#            )
+add_definitions ( -DLAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../../res/testfiles" )
 
 ### add definitions ###
 if ( WIN32 )
