--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -37,22 +37,15 @@ cmake_minimum_required ( VERSION 2.8 )
 ### Set PROJECT NAME / supported LANGUAGES
 project( scai_tasking CXX )
 
-### Set version of tasking
-# TOOD: where is the best place to define this?
-set ( SCAI_TASKING_VERSION_NAME "Alpamayo" )
-set ( SCAI_TASKING_COPYRIGHT_YEAR 2015 )
-set ( SCAI_TASKING_VERSION_MAJOR 1 )
-set ( SCAI_TASKING_VERSION_MINOR 0 )
-set ( SCAI_TASKING_VERSION_PATCH 1 )
-set ( SCAI_TASKING_VERSION_COUNT 3 )
-set ( SCAI_TASKING_VERSION ${SCAI_TASKING_VERSION_MAJOR}.${SCAI_TASKING_VERSION_MINOR}.${SCAI_TASKING_VERSION_PATCH} )
-
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
+
+include ( VersionDefinition )
 
 ### Include Compiler Flags
 if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( SetBuildFlags )
+    include ( CompilerVersion )
 	include ( SCAIAssert )
 	include ( SetCPPFlags )
 	include ( Package/Sphinx )
@@ -65,15 +58,6 @@ include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
-
-if    ( NOT CXX_SUPPORTS_C11 )
-    configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../boost_check.hpp.in"
-                     "${CMAKE_CURRENT_BINARY_DIR}/boost_check.hpp" )
-else  ( NOT CXX_SUPPORTS_C11 )
-    configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../boost_check.hpp.in_empty"
-                     "${CMAKE_CURRENT_BINARY_DIR}/boost_check.hpp" )
-endif ( NOT CXX_SUPPORTS_C11 )
-install ( FILES ${CMAKE_CURRENT_BINARY_DIR}/boost_check.hpp DESTINATION include/scai )
 
 ### include all search packages
 include ( InternalDependencies )
@@ -89,11 +73,8 @@ include ( ConcludeFlags )
 ### add definitions
 
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-
 add_definitions ( -D${SCAI_LOGGING_FLAG} )
-
 add_definitions( -DSCAI_TRACE_ON )
-
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
 
 if    ( WIN32 )
