--- a/scai/common/bind.hpp.in
+++ b/scai/common/bind.hpp.in
@@ -1,5 +1,5 @@
 /**
- * @file common/shared_ptr.hpp
+ * @file common/bind.hpp
  *
  * @license
  * Copyright (c) 2009-2015
@@ -25,34 +25,26 @@
  * SOFTWARE.
  * @endlicense
  *
- * @brief Embedding shared_ptr in common namespace.
+ * @brief Embedding bind in common namespace.
  * @author Thomas Brandes
  * @date 15.07.2015
  */
 
 #pragma once
 
-#if __cplusplus > 199711L or defined(__GXX_EXPERIMENTAL_CXX0X__)
-#include <memory>
-#else
-#include <boost/shared_ptr.hpp>
-#include <boost/enable_shared_from_this.hpp>
-#endif
+// std
+#include <functional>
 
 namespace scai
 {
 
 namespace common
 {
- #if __cplusplus > 199711L or __GXX_EXPERIMENTAL_CXX0X__
-    using std::shared_ptr;
-    using std::dynamic_pointer_cast;
-    using std::enable_shared_from_this;
-#else
-    using boost::shared_ptr;
-    using boost::dynamic_pointer_cast;
-    using boost::enable_shared_from_this;
-#endif
+    using std::bind;
+    using std::ref;
+    using std::cref;
+    using namespace std::placeholders;
+
 } /* end namespace common */
 
 } /* end namespace scai */
