--- a/scai/common/function.hpp.in
+++ b/scai/common/function.hpp.in
@@ -1,5 +1,5 @@
 /**
- * @file common/unique_ptr.hpp
+ * @file common/function.hpp
  *
  * @license
  * Copyright (c) 2009-2015
@@ -25,66 +25,21 @@
  * SOFTWARE.
  * @endlicense
  *
- * @brief Embedding unique_ptr in common namespace.
+ * @brief Embedding function, either std::function or boost::function, in common namespace.
  * @author Thomas Brandes
  * @date 15.07.2015
  */
 
 #pragma once
 
-#if __cplusplus > 199711L or defined(__GXX_EXPERIMENTAL_CXX0X__)
-    #include <memory>
-#else
- 
-    // Boost 1.57 and higher provides same unique_ptr as C++
-    // but unfortunately not the previous versions
-    // #include <boost/interprocess/smart_ptr/unique_ptr.hpp>
-
-    #include <boost/scoped_array.hpp>
-    #include <memory>
-
-#endif
+#include <functional>
 
 namespace scai
 {
 
 namespace common
 {
-#if __cplusplus > 199711L or defined(__GXX_EXPERIMENTAL_CXX0X__)
-
-    using std::unique_ptr;
-
-    /** C++11: here we can use unique_ptr for a scoped array */
-
-    template<typename T>
-    class scoped_array : public std::unique_ptr<T[]>
-    {
-    public:
-        scoped_array( T* ptr ) : std::unique_ptr<T[]>( ptr )
-        {
-        }
-        scoped_array() : std::unique_ptr<T[]>()
-        {
-        }
-    };
-
-#else
-
-    using boost::scoped_array;
-
-    template<typename T>
-    class unique_ptr : public std::auto_ptr<T>
-    {
-    public:
-        unique_ptr( T* ptr ) : std::auto_ptr<T>( ptr ) 
-        {
-        }
-        unique_ptr() : std::auto_ptr<T>() 
-        {
-        }
-    };
-#endif
-
+    using std::function;
 } /* end namespace common */
 
 } /* end namespace scai */
