new IterativeSolver::QMR

--- a/scai/lama/solver/CMakeLists.txt
+++ b/scai/lama/solver/CMakeLists.txt
@@ -59,6 +59,7 @@ set ( CLASSES
         IterativeSolver
         MINRES
         OmegaSolver
+	QMR
 	Richardson
         SimpleAMG
         SingleGridSetup
